restore path based access

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "merge": "^2.1.1",
     "nan": "^2.15.0",
-    "node-gyp": "^8.2.0"
+    "node-gyp": "^8.2.0",
+    "path": "^0.12.7"
   },
   "engines": {
     "node": ">=8"
