--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "dependencies": {
     "merge": "^2.1.1",
     "nan": "^2.15.0",
-    "node-gyp": "^8.2.0",
-    "path": "^0.12.7"
+    "node-gyp": "^8.2.0"
   },
   "engines": {
     "node": ">=8"
