--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": {
     "url": "http://github.com/mivion/swisseph.git"
   },
+  "type": "module",
   "main": "./lib/swisseph.js",
   "keywords": [
     "swiss",
@@ -17,8 +18,7 @@
   "dependencies": {
     "merge": "^2.1.1",
     "nan": "^2.15.0",
-    "node-gyp": "^8.2.0",
-    "path": "^0.12.7"
+    "node-gyp": "^8.2.0"
   },
   "engines": {
     "node": ">=8"
